# ChangeLog for games-puzzle/OsmosDemo
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Jul 2010; Michael Weber (xmw) <gentoo@xmw.de> +OsmosDemo-1.6.0.ebuild,
  +metadata.xml:
  New ebuild for bug 327435
