@@ -1,4 +1,6 @@
+AUX FortuneCity.ttf 34104 RMD160 32f757ebe18f0570293cc3246030610769b87307 SHA1 a55f4aacbb553bf54f138dd895fa9f43c2acd959 SHA256 54f679f5f97d6bbb07c35a691fa2704bdaeef2414c94e9a0cc34b2abe46835c6
 DIST OsmosDemo_1.6.0.tar.gz 7796374 RMD160 b069cafac15acfc8dc50efcc2a60a1be04b6415d SHA1 ed0a55d5b451c87041b2dacb846195868e91046f SHA256 ebc208652edaee4995cc55cdd1e422743462567de340b647a8dd454f853dd161
+EBUILD OsmosDemo-1.6.0-r1.ebuild 1281 RMD160 fe74139c8655aa0338726b25e5e102932ba27f87 SHA1 67fba1229b2db904063e99848d589e79d210e7b1 SHA256 4dc2fcb9739af0e163af06d18f9c9cadd0058e12584edd117793907c0577fead
 EBUILD OsmosDemo-1.6.0.ebuild 1089 RMD160 372c73ca1ba3ccc69eb844da5af7020ecbb75a48 SHA1 81ab42bb944e6da3e2779ac28c94ba073a60bc64 SHA256 63c8bb4c6572d0640d448718361e54c9b68ecc4b17e3646a138d96e7f34c021a
 MISC ChangeLog 245 RMD160 da06b7e14a5b9468ec6713991614642c4b60ab79 SHA1 0e775403ce2077aacbc9b2a4b7372c0ae4b8464f SHA256 2924bb1589f30587c3e0a71274ab8afdd37837186ac156bd339d519815fa4ac1
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
