@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Nov 2010; Sergey Bochenkov <bachan@j3qq4.org> +OsmosDemo-1.6.0-r1.ebuild,
+  +files/FortuneCity.ttf:
+  New FortuneCity.ttf (given from the steam version) and ebuild for it
+
   09 Jul 2010; Michael Weber (xmw) <gentoo@xmw.de> +OsmosDemo-1.6.0.ebuild,
   +metadata.xml:
   New ebuild for bug 327435
